# test_task_google_api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  task.md
exchange_rate/: Dockerfile  creds.json  manage.py  pyproject.toml
exchange_rate/exchange_rate/: asgi.py  celery.py  redis.conf  settings.py  urls.py  wsgi.py
exchange_rate/orders/: consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
exchange_rate/orders/migrations/: 0001_initial.py  0002_alter_order_price_rub_alter_order_price_usd.py
exchange_rate/orders/services/: constants.py  currency.py  fill_db.py  google_api.py  send_msg_to_tg.py  utils.py  validators.py
exchange_rate_react/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
exchange_rate_react/nginx/: default.conf
exchange_rate_react/src/: App.js  AppBar.js  Chart.js  Exchange.js  ExchangeTable.js  Item.js  Total.js  index.js
